Update gazeplayLauncher.sh